--- a/pictionary/app/assets/stylesheets/application.css
+++ b/pictionary/app/assets/stylesheets/application.css
@@ -13,3 +13,15 @@
  *= require_tree .
  *= require_self
  */
+
+* {
+   margin: 0;
+   padding: 0;
+   font-family: helvetica;
+   font-size: 16px;
+   line-height: 1.7em;
+}
+
+body {
+  margin: 30px;
+}
