--- a/pictionary/app/views/session/new.html.erb
+++ b/pictionary/app/views/session/new.html.erb
@@ -11,7 +11,7 @@
 
     <fieldset>
       <%= label_tag :password %>
-      <%= email_field_tag :password, nil %>
+      <%= password_field_tag :password, nil %>
     </fieldset>
 
     <%= submit_tag 'Login' %>
