--- a/pictionary/app/views/layouts/application.html.erb
+++ b/pictionary/app/views/layouts/application.html.erb
@@ -10,6 +10,14 @@
   </head>
 
   <body>
+    <nav>
+      <% if @current_user.present? %>
+        <%= link_to 'Log Out', login_path, method: 'delete' %>
+      <% else %>
+        <%= link_to 'Login', login_path  %>
+      <% end %>
+
+    </nav>
     <%= yield %>
   </body>
 </html>
