--- a/pictionary/app/views/users/edit.html.erb
+++ b/pictionary/app/views/users/edit.html.erb
@@ -1,2 +1,2 @@
-<h1>User#edit</h1>
-<p>Find me in app/views/user/edit.html.erb</p>
+<h2><%= @current_user.name %>Edit your profile</h2>
+<%= render partial: 'form' %>
