Added words controller and a few views

--- a/pictionary/app/views/pages/home.html.erb
+++ b/pictionary/app/views/pages/home.html.erb
@@ -2,4 +2,4 @@
 
 <p>Lorem ipsum dolor sit amet, consectetur adipiscing elit. Curabitur tincidunt tristique hendrerit. Sed id ipsum tortor. Nullam non mi at mi vulputate euismod ut ac velit. Aliquam vel magna rutrum, dapibus velit et, placerat quam. In hac habitasse platea dictumst. Vivamus a luctus velit, sed rutrum erat. Proin scelerisque consectetur tincidunt. Cras elit mauris, accumsan nec neque in, congue mattis enim. Donec non tortor non nibh vestibulum condimentum. Cras gravida rhoncus arcu a pulvinar.</p>
 
-<%= link_to 'Play', drawing_start_path %>
+<%= link_to 'Play', start_path %>
