--- a/pictionary/app/views/drawings/new.html.erb
+++ b/pictionary/app/views/drawings/new.html.erb
@@ -1,2 +1,3 @@
-<h1>Drawings#new</h1>
-<p>Find me in app/views/drawings/new.html.erb</p>
+<div class="drawing"></div>
+
+<%= button_to 'Save Drawing', drawings_path, method: 'POST' %>
