--- a/pictionary/app/assets/stylesheets/words.scss
+++ b/pictionary/app/assets/stylesheets/words.scss
@@ -9,19 +9,19 @@
 
 .gallery-container {
   display: grid;
-  grid-template-columns: 1fr 1fr;
+  grid-template-columns: 1fr 1fr 1fr;
   grid-column-gap: 1em;
   grid-row-gap: 1em;
   width: 100%;
 }
 
-.drawing {
+.gallery-drawing {
   width: 100%;
   height: 100%;
   border: solid black 1px;
 }
 
-.drawing img {
+.drawing-icon {
   width: 100%;
   height: 100%;
 }
@@ -29,4 +29,15 @@
 .words-list li {
   list-style-type: none;
   cursor: pointer;
+}
+
+.lightbox-container {
+  display: none;
+  width: 100vw;
+  height: 100vh;
+  position: fixed;
+  top: 0;
+  left: 0;
+  z-index: 1;
+  background-color: rgba(0, 0, 0, 0.2);
 }
