--- a/pictionary/app/views/layouts/application.html.erb
+++ b/pictionary/app/views/layouts/application.html.erb
@@ -11,12 +11,13 @@
 
   <body class="<%= controller_name %> <%= action_name %>">
     <nav>
+      <%= link_to 'Gallery', words_path %>
+       | 
       <% if @current_user.present? %>
         <%= link_to 'Log Out', login_path, method: 'delete' %>
       <% else %>
         <%= link_to 'Login', login_path  %>
       <% end %>
-
     </nav>
     <%= yield %>
   </body>
