--- a/pictionary/app/views/users/edit.html.erb
+++ b/pictionary/app/views/users/edit.html.erb
@@ -1,2 +1,2 @@
-<h2><%= @current_user.name %>Edit your profile</h2>
+<h2><%= @current_user.name %>, Edit your profile</h2>
 <%= render partial: 'form' %>
