--- a/pictionary/app/assets/stylesheets/drawings.scss
+++ b/pictionary/app/assets/stylesheets/drawings.scss
@@ -1,3 +1,16 @@
-// Place all the styles related to the drawings controller here.
-// They will automatically be included in application.css.
-// You can use Sass (SCSS) here: http://sass-lang.com/
+#canvasContainer {
+  border: 2px solid black;
+  margin: 0 auto;
+  width: 90vw;
+}
+
+#canvasElement {
+  margin: 0;
+}
+
+#saveButton, #clearButton, #nextButton {
+  padding-left: 10px;
+  padding-right: 10px;
+  margin: 20px;
+  width: 70px;
+}
