--- a/pictionary/app/views/drawings/draw.html.erb
+++ b/pictionary/app/views/drawings/draw.html.erb
@@ -1,5 +1,20 @@
 <h2><%= @word.word %></h2>
 
-<div class="canvas"></div>
+<button id="saveButton" type="button">Save</button>
+<button id="clearButton" type="button">Clear</button>
+<%= form_for @drawing do |f|%>
+
+<%= f.hidden_field :image, value:"" %>
+
+<%= f.hidden_field :user_id, value:"#{@current_user}" %>
+
+<%= f.hidden_field :word_id, value:"#{@word.id}" %>
+
+<%= f.submit %>
+
+<% end %>
+
+<div id="canvasContainer">
+</div>
 
 <div class="timer"></div>
