--- a/pictionary/app/views/words/index.html.erb
+++ b/pictionary/app/views/words/index.html.erb
@@ -1,4 +1,4 @@
-<h1>Gallery</h1>
+<h1>All Drawings</h1>
 
 <div class="main-container">
   <div class="words-list">
@@ -11,10 +11,6 @@
     </ul>
   </div>
 
-  <div class="lightbox-container">
-    <div class="modal"></div>
-  </div>
-
   <div class="gallery-container">
     <% @drawings.each do |drawing| %>
       <div class="gallery-drawing">
@@ -22,4 +18,8 @@
       </div>
     <% end %>
   </div>
+
+  <!-- <div class="lightbox-container">
+    <div class="modal"></div>
+  </div> -->
 </div>
