--- a/pictionary/app/views/drawings/start.html.erb
+++ b/pictionary/app/views/drawings/start.html.erb
@@ -1,4 +1,4 @@
 <p>You have 20 seconds to draw... </p>
-<h2><%= @word.word %></h2>
+<h2><%= @current_word.word %></h2>
 
-<%= link_to 'Start Drawing!', draw_path(@word) %>
+<%= link_to 'Start Drawing!', new_drawing_path %>
