--- a/pictionary/app/views/drawings/new.html.erb
+++ b/pictionary/app/views/drawings/new.html.erb
@@ -1,3 +1,23 @@
-<div class="drawing"></div>
+<h2><%= @word.word %></h2>
 
-<%= button_to 'Save Drawing', drawings_path, method: 'POST' %>
+<button id="saveButton" type="button">Save</button>
+<button id="clearButton" type="button">Clear</button>
+
+<%= form_for @drawing, html: {multipart: true} do |f|%>
+
+  <div id="imageField">
+    <%= f.hidden_field :image, value:"" %>
+  </div>
+
+  <%= f.hidden_field :user_id, value:"#{@current_user}" %>
+
+  <%= f.hidden_field :word_id, value:"#{@word.id}" %>
+
+  <%= f.submit %>
+
+<% end %>
+
+<div id="canvasContainer">
+</div>
+
+<div class="timer"></div>
