--- a/pictionary/app/views/layouts/application.html.erb
+++ b/pictionary/app/views/layouts/application.html.erb
@@ -12,7 +12,7 @@
   <body class="<%= controller_name %> <%= action_name %>">
 
     <nav class="pages">
-      <%= link_to 'Play', pages_home_path %>
+      <%= link_to 'Play', new_game_path %>
        |
       <%= link_to 'All Drawings', words_path %>
     </nav>
