--- a/pictionary/app/views/games/play.html.erb
+++ b/pictionary/app/views/games/play.html.erb
@@ -1,4 +1,4 @@
-<h2><%= @word.word %></h2>
+<h2><%= @game.word.word %></h2>
 
 <button id="saveButton" type="button">Save</button>
 <button id="clearButton" type="button">Clear</button>
