--- a/pictionary/app/views/games/ready.html.erb
+++ b/pictionary/app/views/games/ready.html.erb
@@ -1,5 +1,9 @@
-<h2>You have 20 seconds to draw...</h2>
-<h1><%= @word.word %></h1>
+
+<% if @current_user == @game.guesser_id %>
+  <%= render partial: 'readyguesser' %>
+<% else %>
+  <%= render partial: 'readydrawer' %>
+<% end %>
 
 
-<%= link_to 'Ready', play_path(game_id: @game, word_id: @word) %>
+<%= link_to 'Ready', play_path(@game) %>
