Websockets up and running (but not doing much)

--- a/pictionary/app/views/games/wait.html.erb
+++ b/pictionary/app/views/games/wait.html.erb
@@ -1,2 +1,3 @@
 <h2>Waiting for ...</h2>
 <p>Your word is: <%= @game.word.word %></p>
+<p>Game status: <span id="game-status"><%= @game.status %></span></p>
