--- a/pictionary/app/views/games/_readyguesser.html.erb
+++ b/pictionary/app/views/games/_readyguesser.html.erb
@@ -1,3 +1,3 @@
 <div>
-  <h2>You have 20 seconds to guess <%= @game.drawer_id.name %>'s Word</h2>
+  <h2>You have 20 seconds to guess <%= @game.drawer.name %>'s Word</h2>
 </div>
