--- a/pictionary/app/views/games/home.html.erb
+++ b/pictionary/app/views/games/home.html.erb
@@ -1,5 +1,12 @@
 <h2>Instructions</h2>
 
-<p>Lorem ipsum dolor sit amet, consectetur adipiscing elit. Curabitur tincidunt tristique hendrerit. Sed id ipsum tortor. Nullam non mi at mi vulputate euismod ut ac velit. Aliquam vel magna rutrum, dapibus velit et, placerat quam. In hac habitasse platea dictumst. Vivamus a luctus velit, sed rutrum erat. Proin scelerisque consectetur tincidunt. Cras elit mauris, accumsan nec neque in, congue mattis enim. Donec non tortor non nibh vestibulum condimentum. Cras gravida rhoncus arcu a pulvinar.</p>
+<div class="instructionsWrapper">
+  <div class="headerInstructions">Draw or guess the word. Click play to play with another user!</div>
+  <div class="instructions drawerInstructions">As the Drawer: Draw the given word. As the Guesser: Try and guess the word that the drawer is trying to draw.</div>
+  <div class=" instructions guesserInstructions">As the Guesser: Try and guess the word that the drawer is trying to draw.</div>
 
-<%= link_to 'Play', games_path, method: 'POST' %>
+  <div class="playLink">
+  <%= link_to 'Play', games_path, method: 'POST', class: 'playLink' %>
+  </div>
+
+</div>
