--- a/pictionary/app/assets/stylesheets/games.scss
+++ b/pictionary/app/assets/stylesheets/games.scss
@@ -1,17 +1,38 @@
-
-.instructionsWrapper {
-  width: 50%;
-  display: flex;
-  flex-direction: column;
-  text-align: center;
+.background-div {
+  width: 100%;
+  height: 100%;
+  margin: 0 auto;
 }
 
-.headerInstructions {
+.background {
+  position: fixed;
+  width: 600px;
+  height: 600px;
+  top: 0;
+  left: 0;
+  z-index: -20;
+}
+
+.instructions-wrapper {
+  width: 60%;
+  min-width: 200px;
+  text-align: center;
+  margin: 0 auto;
+  opacity: 0.9;
+  background-color: white;
+}
+
+.header-instructions {
   font-size: 2em;
 }
 
 .instructions {
+  margin: 20px;
   font-size: 1.5em;
+}
+
+.play-link {
+
 }
 
 h2.drawer_play {
