--- a/pictionary/app/views/games/_canvas_js_drawer.html.erb
+++ b/pictionary/app/views/games/_canvas_js_drawer.html.erb
@@ -4,20 +4,43 @@ $(document).ready(function() {
 
   // mouse down draws a single circle and sets last known x,y pos as the clicked pos
   $('#canvasElement').mousedown(event => {
-    canvasApp.setPosition(event);
-    canvasApp.drawOnClick(event);
-    App.games.perform('drawer_clicked', {x: 0, y: 0});
+    const xPos = event.pageX;
+    const yPos = event.pageY;
+
+    canvasApp.setPosition(xPos, yPos);
+    canvasApp.drawOnClick();
+
+    App.games.perform('drawer_clicked', {event: 'click', position: {xPos: xPos, yPos: yPos}});
   });
 
   // mouse enter sets last known x,y pos as the entered pos
   $('#canvasElement').mouseenter(event => {
-    canvasApp.setPosition(event)
+    const xPos = event.pageX;
+    const yPos = event.pageY;
+
+    canvasApp.setPosition(xPos, yPos);
+
+    App.games.perform('drawer_entered', {event: 'mouseenter', position: {xPos: xPos, yPos: yPos}});
   });
 
   // on mouse move draws a line from last known x,y to new x,y pos set in the drawOnMove function
   $('#canvasElement').mousemove(event => {
-    canvasApp.drawOnMove(event);
+    const userInput = event.which;
+    const xPos = event.pageX;
+    const yPos = event.pageY;
+
+    canvasApp.drawOnMove(userInput, xPos, yPos);
+
+    if(userInput === 1){
+      App.games.perform('drawer_moved', {event: 'mousemove', position: {xPos: xPos, yPos: yPos}, userInput: userInput});
+    }
   });
+
+  $('.clearButton').on('click', function() {
+    canvasApp.clearCanvas();
+
+    App.games.perform('clear_canvas', {clear: true});
+   });
 
 });
 </script>
