--- a/pictionary/app/views/games/_canvas_js_drawer.html.erb
+++ b/pictionary/app/views/games/_canvas_js_drawer.html.erb
@@ -1,4 +1,6 @@
 <%# This code is just for the drawer - the mouse event handlers that draw on the canvas %>
+<script src="/leap.js"></script>
+
 <script>
 $(document).ready(function() {
 
@@ -41,6 +43,8 @@ $(document).ready(function() {
 
     App.games.perform('clear_canvas', {clear: true});
    });
+
+   $('body').append("<div id='cursor'></div>")
 
 });
 </script>
