--- a/pictionary/app/assets/stylesheets/games.scss.erb
+++ b/pictionary/app/assets/stylesheets/games.scss.erb
@@ -51,3 +51,11 @@ h2.drawer_play {
   width: 100%;
   height: 100%;
 }
+
+#cursor {
+  position: absolute;
+  background-image: url("<%= asset_path 'pencil.png' %>");
+  background-size: cover;
+  height: 25px;
+  width: 25px;
+}
