--- a/pictionary/app/views/games/_canvas_js_common.html.erb
+++ b/pictionary/app/views/games/_canvas_js_common.html.erb
@@ -2,16 +2,20 @@
 
   const currentWord = "<%= @game.word.word %>";
   let canvas;
+  let ctx;
   let canvasApp;
+  let offsetX;
+  let offsetY;
+
 
   $(document).ready(function() {
 
     $('#canvasContainer').append("<canvas id='canvasElement'></canvas>");
     canvas = document.getElementById("canvasElement");
-    const ctx = canvas.getContext("2d");
+    ctx = canvas.getContext("2d");
 
-    let offsetX = $('#canvasElement').offset().left;
-    let offsetY = $('#canvasElement').offset().top;
+    offsetX = $('#canvasElement').offset().left;
+    offsetY = $('#canvasElement').offset().top;
 
     ctx.canvas.width = 400;
     ctx.canvas.height = 500;
@@ -75,89 +79,7 @@
 
 
 
-    //LEAP BOX
 
-
-    $('#cursor').css({
-      top: offsetY,
-      left: offsetX
-    });
-
-     let controller = new Leap.Controller({enableGestures: true});
-
-     controller.on("frame", function(frame) {
-       if (frame.gestures.length > 0) {
-        for (var i = 0; i < frame.gestures.length; i++) {
-          var gesture = frame.gestures[i];
-          if(gesture.type == "swipe") {
-            canvasApp.clearCanvas();
-           }
-         }
-      }
-
-     if (frame.pointables.length > 0) {
-        // canvas.width = canvas.width; //clear
-
-        //Get a pointable and normalize the tip position
-        let pointable = frame.pointables[0];
-        let interactionBox = frame.interactionBox;
-        let normalizedPosition = interactionBox.normalizePoint(pointable.tipPosition, true);
-
-        // Convert the normalized coordinates to span the canvas
-        let canvasX = canvas.width * normalizedPosition[0];
-        let canvasY = canvas.height * (1 - normalizedPosition[1]);
-        //we can ignore z for a 2D context
-
-        if (pointable.tipPosition[2] < 30) {
-          $('#cursor').css({
-            opacity: 1.0
-          });
-          leapApp.drawLeap(canvasX.toFixed(1), canvasY.toFixed(1))
-        } else {
-          leapApp.setLeapPosition(canvasX.toFixed(1), canvasY.toFixed(1))
-          $('#cursor').css({
-            opacity: 0.3,
-          });
-        }
-        $('#cursor').css({
-          display: 'block',
-          top: offsetY + canvasY - 25,
-          left: offsetX + canvasX
-        });
-
-
-      } else {
-        $('#cursor').hide();
-      }
-    });
-    controller.connect();
-
-    const leapApp = {
-
-      pos: {
-        x: null,
-        y: null
-      },
-
-      setLeapPosition: function(x, y) {
-        this.pos.x = x
-        this.pos.y = y
-      },
-
-      drawLeap: function(x, y) {
-        ctx.beginPath(); // begin the drawing path
-        ctx.lineWidth = 5; // width of line
-        ctx.lineCap = "round"; // rounded end cap
-
-        ctx.moveTo(this.pos.x, this.pos.y); // from position
-        this.setLeapPosition(x, y); // set new pos
-        ctx.lineTo(this.pos.x, this.pos.y); // to position
-
-        ctx.stroke(); // draw
-      },
-
-
-    };
 
   }); //document ready
 
