CSS and templates updated

--- a/app/views/games/_canvas_js_common.html.erb
+++ b/app/views/games/_canvas_js_common.html.erb
@@ -1,6 +1,6 @@
 <script>
 
-  const currentGame = "<%= @game.id %>";
+  const currentGame = <%= @game.id %>;
   const currentWord = "<%= @game.word.word %>";
   const gameOverRedirectURL = "<%= game_result_path(@game) %>"
   let canvasApp;
