--- a/app/assets/stylesheets/application.css
+++ b/app/assets/stylesheets/application.css
@@ -17,24 +17,63 @@
 * {
   margin: 0;
   padding: 0;
-  font-family: helvetica;
+  font-family: 'helvetica', sans-serif;
   font-size: 16px;
-  line-height: 1.7em;
+  line-height: 1.8em;
 }
 
 body {
   margin: 30px;
 }
 
+.wrapper {
+  max-width: 65vw;
+}
+
+h1 {
+  font-size: 50px;
+  font-weight: 800;
+  letter-spacing: 4px;
+  line-height: 1em;
+  text-transform: uppercase;
+  padding-bottom: 15px;
+}
+
+.nav-container {
+  padding: 12px 0;
+  border-top: dashed 1px black;
+  border-bottom: dashed 1px black;
+}
+
+nav {
+  display: inline-block;
+  width: 49.5%;
+}
+
+nav a {
+  font-size: 14px;
+  text-transform: uppercase;
+  font-weight: 400;
+  letter-spacing: 1px;
+}
+
+a {
+  color: black;
+  text-decoration: none;
+}
+
+nav.user-account {
+  text-align: right;
+}
+
+nav.user-account a {
+  padding-left: 20px;
+}
+
+nav.pages a {
+  padding-right: 20px;
+}
+
 fieldset {
   border: none;
-}
-
-.login-container {
-  width: 300px;
-}
-
-.login-container label {
-  width: 100px;
-  display: inline-block;
 }
