--- a/app/assets/stylesheets/games.scss.erb
+++ b/app/assets/stylesheets/games.scss.erb
@@ -1,40 +1,42 @@
-.background-div {
+/* GAMES#HOME */
+.instructions-container {
+  margin: 20px 10px;
   width: 100%;
-  height: 100%;
-  margin: 0 auto;
 }
 
-.background {
-  position: fixed;
-  width: 600px;
-  height: 600px;
-  top: 0;
-  left: 0;
-  z-index: -20;
-}
-
-.instructions-wrapper {
-  width: 60%;
-  min-width: 200px;
+.playButton {
+  background-color: red;
+  border-radius: 50px;
+  display: inline-block;
+  width: 100px;
+  height: 100px;
   text-align: center;
-  margin: 0 auto;
-  opacity: 0.9;
-  background-color: white;
+  margin: 40px auto;
 }
 
-.header-instructions {
-  font-size: 2em;
+.playButton:hover {
+  background-color: blue;
 }
 
-.instructions {
-  margin: 20px;
-  font-size: 1.5em;
+.playButton a {
+  font-size: 20px;
+  font-weight: 800;
+  font-style: italic;
+  text-transform: uppercase;
+  letter-spacing: 4px;
+  line-height: 100px;
+  color: white;
 }
 
-.play-link {
-
+h2 {
+  font-size: 18px;
+  text-transform: uppercase;
+  letter-spacing: 1px;
+  padding-bottom: 10px;
 }
 
+
+/* GAMES#PLAY */
 h2.drawer_play {
   display: none;
 }
