--- a/app/views/games/home.html.erb
+++ b/app/views/games/home.html.erb
@@ -1,19 +1,18 @@
+<style>
+  body {
+    background_image: url(<%= @background_image.image %>);
+  }
+</style>
 
-<h2>Instructions</h2>
+<div class="instructions-container">
 
+  <p>Skip the boring stuff (i.e. instructions) and go straight to the game!</p>
 
-<div class="instructions-wrapper">
-  <div class="header-instructions">
-    Draw or guess the word. Click on 'Play' to start a game with another player!
-  </div>
-  <div class="instructions drawer-instructions">
-    As the Drawer: Draw the given word.
-  </div>
-  <div class=" instructions guesser-instructions">
-    As the   Guesser: Try and guess the word that the drawer is trying to draw.
+  <div class="playButton">
+    <%= link_to 'Play', games_path, method: 'POST' %>
   </div>
 
-  <div class="play-link">
-  <%= link_to 'Play', games_path, method: 'POST', class: 'playLink' %>
-  </div>
-</div>
+  <h2>Instructions</h2>
+
+  <p>Click the play button above and you'll be paired with another player. If you are the drawer, you will have 30 seconds to sketch you're given word. If you are the guesser, you have 30 seconds to guess the given word. Easy as pie, right!</p>
+</div> <!-- instructions-container -->
