--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -10,31 +10,33 @@
     <%= javascript_include_tag 'application' %>
   </head>
 
-
   <body class="<%= controller_name %> <%= action_name %>">
+    <div class="wrapper">
+      <h1>How do you doodle?</h1>
 
-    <nav class="pages">
-      <%= link_to 'Play', root_path %>
-       |
-      <%= link_to 'All Drawings', words_path %>
-    </nav>
+      <div class="nav-main-container">
 
-    <nav class="user-account">
-      <% if @current_user.present? %>
-        <%= link_to 'My Drawings', user_gallery_path %>
-         |
-        <%= link_to 'My Account', edit_user_path(@current_user) %>
-         |
-        <%= link_to 'Sign Out', login_path, method: 'delete' %>
-      <% else %>
-        <%= link_to 'Sign In', login_path  %>
-         |
-        <%= link_to 'Sign Up', new_user_path %>
-      <% end %>
-    </nav>
+        <div class="nav-container">
+          <nav class="pages">
+            <%= link_to 'Game', root_path %>
+            <%= link_to 'Gallery', words_path %>
+          </nav>
 
-    <%= yield %>
+          <nav class="user-account">
+            <% if @current_user.present? %>
+              <%#<%= link_to 'My Drawings', user_gallery_path %>
+              <%= link_to 'My Account', edit_user_path(@current_user) %>
+              <%= link_to 'Sign Out', login_path, method: 'delete' %>
+            <% else %>
+              <%= link_to 'Sign In', login_path  %>
+              <%= link_to 'Sign Up', new_user_path %>
+            <% end %>
+          </nav>
+        </div> <!-- nav-container -->
 
+        <%= yield %>
+      </div> <!-- nav-main-container -->
+    </div> <!-- wrapper -->
   </body>
 
 </html>
