--- a/app/views/users/gallery.html.erb
+++ b/app/views/users/gallery.html.erb
@@ -4,10 +4,12 @@
 
   <% if @games.present? %>
     <% @games.each do |game| %>
-      <div class="gallery-drawing">
-        <%= cl_image_tag game.image, class: 'drawing-icon' %>
-        <span><%= game.word.word %> | Drawn on <%= game.created_at.strftime("%b %d, %Y") %></span>
-      </div>
+      <% if game.status == "finished" %>
+        <div class="gallery-drawing">
+          <%= cl_image_tag game.image, class: 'drawing-icon' %>
+          <span><%= game.word.word %> | Drawn on <%= game.created_at.strftime("%b %d, %Y") %></span>
+        </div>
+      <% end %>
     <% end %>
 
   <% else %>
