--- a/app/assets/stylesheets/games.scss.erb
+++ b/app/assets/stylesheets/games.scss.erb
@@ -1,6 +1,6 @@
 /* GAMES#HOME */
 .instructions-container {
-  margin: 20px 10px;
+  margin: 30px auto;
   width: 100%;
 }
 
@@ -37,16 +37,25 @@ h2 {
 
 
 /* GAMES#PLAY */
+.game_header {
+  width: 880px;
+  border-bottom: dashed 1px black;
+  margin-bottom: 20px;
+}
+.games.play h2 {
+  font-size: 28px;
+}
+
 h2.drawer_play {
   display: none;
 }
 
 #canvasContainer {
   position: fixed;
-  top: 150px;
-  left: 0;
-  width: 400px;
-  height: 500px;
+  top: 170px;
+  left: 30px;
+  width: 880px;
+  height: 550px;
 }
 
 #canvasElement {
