--- a/app/views/games/_drawer_play.html.erb
+++ b/app/views/games/_drawer_play.html.erb
@@ -4,7 +4,8 @@
 </script>
 
 <div class="game_header">
-  <h2 class="drawer_wait">Practice drawing while you wait for a guesser.</h2>
+  <h2 class="drawer_wait">Practice drawing while you wait for a guesser</h2>
   <h2 class="drawer_play"><%= @game.drawer.name %> you are drawing... <%= @game.word.word %>!</h2>
-  <button type="button" class="clearButton">Clear Canvas</button>
 </div>
+
+<button type="button" class="clearButton">Clear Canvas</button>
