--- a/app/views/games/home.html.erb
+++ b/app/views/games/home.html.erb
@@ -4,15 +4,34 @@
   }
 </style>
 
+<h1>How do you doodle?</h1>
+
+<div class="nav-container">
+  <nav class="pages">
+    <%= link_to 'Game', root_path %>
+    <%= link_to 'Gallery', words_path %>
+  </nav>
+
+  <nav class="user-account">
+    <% if @current_user.present? %>
+      <%= link_to 'My Account', edit_user_path(@current_user) %>
+      <%= link_to 'Sign Out', login_path, method: 'delete' %>
+    <% else %>
+      <%= link_to 'Sign In', login_path  %>
+      <%= link_to 'Sign Up', new_user_path %>
+    <% end %>
+  </nav>
+
+</div> <!-- nav-container -->
+
 <div class="instructions-container">
 
-  <p>Skip the boring stuff (i.e. instructions) and go straight to the game!</p>
+  <h2>Instructions</h2>
+
+  <p>Click the play button above and you'll be paired with another player. If you are the drawer, you will have 30 seconds to sketch you're given word. If you are the guesser, you have 30 seconds to guess the given word. Easy as pie, right!</p>
 
   <div class="playButton">
     <%= link_to 'Play', games_path, method: 'POST' %>
   </div>
 
-  <h2>Instructions</h2>
-
-  <p>Click the play button above and you'll be paired with another player. If you are the drawer, you will have 30 seconds to sketch you're given word. If you are the guesser, you have 30 seconds to guess the given word. Easy as pie, right!</p>
 </div> <!-- instructions-container -->
