--- a/app/views/games/play.html.erb
+++ b/app/views/games/play.html.erb
@@ -8,7 +8,6 @@
   <%= render partial: 'guesser_play' %>
 <% end %>
 
-<div id="canvasContainer">
-</div>
+<div id="canvasContainer"></div>
 
 <div class="timer"></div>
