--- a/app/assets/stylesheets/games.scss.erb
+++ b/app/assets/stylesheets/games.scss.erb
@@ -50,6 +50,16 @@ h2.drawer_play {
   display: none;
 }
 
+.game_word {
+  color: red;
+  font-size: 28px;
+}
+
+.game_buttons {
+  display: inline-block;
+  width: auto;
+}
+
 #canvasContainer {
   position: fixed;
   top: 170px;
@@ -70,4 +80,16 @@ h2.drawer_play {
   height: 25px;
   width: 25px;
   opacity: 0;
+}
+
+.timer {
+  display: inline-block;
+  width: 300px;
+  height: 20px;
+  float: right;
+  text-align: right;
+  font-size: 18px;
+  text-transform: uppercase;
+  letter-spacing: 1px;
+  padding: 4px;
 }
