--- a/app/views/games/_drawer_play.html.erb
+++ b/app/views/games/_drawer_play.html.erb
@@ -5,7 +5,11 @@
 
 <div class="game_header">
   <h2 class="drawer_wait">Practice drawing while you wait for a guesser</h2>
-  <h2 class="drawer_play"><%= @game.drawer.name %> you are drawing... <%= @game.word.word %>!</h2>
+  <h2 class="drawer_play">
+    <%= @game.drawer.name %> you are drawing... <span class="game_word"><%= @game.word.word %>!</span>
+  </h2>
 </div>
 
-<button type="button" class="clearButton">Clear Canvas</button>
+<div class="game_buttons">
+  <button type="button" class="clearButton">Clear Canvas</button>
+</div>
